--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "@hookform/resolvers": "^5.2.2",
     "bootstrap": "^5.3.8",
     "firebase": "^12.5.0",
+    "fslightbox-react": "^2.0.0",
+    "lg-thumbnail": "^1.2.1",
+    "lg-zoom": "^1.3.0",
+    "lightgallery": "^2.9.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.66.0",
@@ -25,6 +29,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
+    "@types/fslightbox-react": "^1.8.0",
     "@types/node": "^24.6.0",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
